# axxium

./: .dockerignore  .env.example  .envrc  .gitattributes  .gitignore  .gitmodules  .ignore  .last_pulse_file  .secrets.baseline  AGENTS.md  CENTRALIZED_MCP_DOCUMENTATION.md  DEBT_SATURATED_SINGULARITY.txt  DEVEL.md  Dockerfile.fly  FINAL_EXAM_OF_THE_ABSOLUTE_MASH.txt  ForkTales_Lyrics.txt  ForkTales_VisualConcept.md  INGESTION_INVESTIGATION.md  Luxe_Nullity_Ledger.txt  Music  OPENCODE-SESSIONS-INDEXER.md  QUICKREF_SESSION_TROUBLESHOOTING.md  README.md  REPOSITORY_INDEX.md  SESSION_RESILIENCE_SUMMARY.md  Saturated_Fiscal_Singularity.txt  Saturated_Responsive_Design.css  Sovereign_Bailout_Spec.md  Sovereign_Bug_Report_Divine_3_Credit_Wall.md  Sovereign_Debt_Inheritance.txt  Sovereign_Nullity_Archive.md  Sutured_Aria_Luxe.mid  TRANSLATION_BACKEND_COMPLETE.md  TRANSLATION_BACKEND_STATUS.md  TRANSLATION_MANUAL_TEST.md  TRANSLATION_PIPELINE_STATUS.md  TRANSLATION_QUICKSTART.md  TUBER_KUN_MANIFEST.md  absurdity_certificate.txt  audio-labels.json  (+199 more)
orgs/reference/moofone/codex-ts-sdk/native/codex-napi/: Cargo.toml  build.rs  index.d.ts  index.js
orgs/reference/openai/codex/codex-rs/: BUILD.bazel  Cargo.toml  README.md  deny.toml
orgs/reference/openai/codex/codex-rs/ansi-escape/: README.md
orgs/reference/openai/codex/codex-rs/app-server/: README.md
orgs/reference/openai/codex/codex-rs/app-server-test-client/: README.md
orgs/reference/openai/codex/codex-rs/codex-api/: README.md
orgs/reference/openai/codex/codex-rs/collaboration-mode-templates/: BUILD.bazel
orgs/reference/openai/codex/codex-rs/core/: BUILD.bazel  README.md  config.schema.json  gpt_5_1_prompt.md  gpt_5_2_prompt.md  prompt_with_apply_patch_instructions.md
orgs/reference/openai/codex/codex-rs/docs/: bazel.md  codex_mcp_interface.md
orgs/reference/openai/codex/codex-rs/exec-server/: README.md
orgs/reference/openai/codex/codex-rs/features/: BUILD.bazel
orgs/reference/openai/codex/codex-rs/git-utils/: README.md
orgs/reference/openai/codex/codex-rs/instructions/: BUILD.bazel
orgs/reference/openai/codex/codex-rs/linux-sandbox/: README.md  build.rs
orgs/reference/openai/codex/codex-rs/models-manager/: prompt.md
orgs/reference/openai/codex/codex-rs/otel/: Cargo.toml  README.md
orgs/reference/openai/codex/codex-rs/responses-api-proxy/: README.md
orgs/reference/openai/codex/codex-rs/scripts/: setup-windows.ps1
orgs/reference/openai/codex/codex-rs/skills/: build.rs
orgs/reference/openai/codex/codex-rs/windows-sandbox-rs/: build.rs  sandbox_smoketests.py
orgs/reference/openai/codex/tools/argument-comment-lint/: BUILD.bazel  README.md  driver.rs  lint_aspect.bzl  list-bazel-targets.sh  run-prebuilt-linter.py  run.py  wrapper_common.py
(+13215 files in other folders)
