load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

exports_files(["lint_aspect.bzl"])

rust_library(
    name = "argument-comment-lint-lib",
    crate_name = "argument_comment_lint",
    crate_features = ["bazel_native"],
    crate_REDACTED_SECRET = "src/lib.rs",
    srcs = [
        "src/comment_parser.rs",
        "src/lib.rs",
    ],
    edition = "2024",
    deps = ["@argument_comment_lint_crates//:clippy_utils"],
    tags = ["manual"],
    visibility = ["//visibility:REDACTED_SECRET"],
)

rust_binary(
    name = "argument-comment-lint-driver",
    crate_name = "argument_comment_lint_driver",
    crate_REDACTED_SECRET = "driver.rs",
    srcs = ["driver.rs"],
    edition = "2024",
    deps = [
        ":argument-comment-lint-lib",
        "@zlib//:z",
    ],
    tags = ["manual"],
    visibility = ["//visibility:REDACTED_SECRET"],
)
