load("//:defs.bzl", "codex_rust_crate")

exports_files(
    ["repo_REDACTED_SECRET.marker"],
    visibility = ["//visibility:REDACTED_SECRET"],
)

codex_rust_crate(
    name = "cargo-bin",
    crate_name = "codex_utils_cargo_bin",
    compile_data = ["repo_REDACTED_SECRET.marker"],
    lib_data_extra = ["repo_REDACTED_SECRET.marker"],
    test_data_extra = ["repo_REDACTED_SECRET.marker"],
    rustc_env = {
        "CODEX_REPO_ROOT_MARKER": "$(rlocationpath :repo_REDACTED_SECRET.marker)",
    },
)
